<resources>
    <string name="app_name">Mobile_Tasks</string>
    <string name="login_button_content">Войти</string>
    <string name="login_input_hint">Номер телефона</string>
    <string name="password_hint_text">Пароль</string>
    <string name="auth_label_text">Вход</string>
    <string name="no_account">Нет аккаунта?</string>
    <string name="sign_up_offer">СОЗДАТЬ АККАУНТ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>